--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,cjs,mjs,json,md,mdx,html,css}\" --cache",
     "check": "pnpm lint && pnpm format:check",
     "precommit": "lint-staged",
-    "prepare": "husky"
+    "prepare": "husky",
+    "db:generate": "dotenv drizzle-kit generate:mysql",
+    "db:push": "dotenv drizzle-kit push:mysql",
+    "db:introspect": "dotenv drizzle-kit introspect:mysql",
+    "db:studio": "dotenv drizzle-kit studio"
   },
   "lint-staged": {
     "*.{ts,tsx,js,cjs,mjs,json,md,mdx,html,css}": [
@@ -21,13 +25,17 @@
     ]
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@t3-oss/env-nextjs": "^0.8.0",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "drizzle-orm": "^0.29.3",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -42,11 +50,12 @@
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
     "autoprefixer": "^10.4.17",
+    "dotenv-cli": "^7.3.0",
+    "drizzle-kit": "^0.20.14",
     "eslint": "^8.56.0",
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.14.1",
-    "husky": "^9.0.10",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
