--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "drizzle-orm": "^0.29.3",
+    "mysql2": "^3.9.1",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
