feat(db): introspect

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,5 @@
-DATABASE_URL="mysql://YOUR_MYSQL_URL_HERE?ssl={"rejectUnauthorized":true}"
+DATABASE_USER=""
+DATABASE_PASSWORD=""
+DATABASE_HOST=""
+DATABASE_PORT=""
+DATABASE_NAME=""
