--- a/package.json
+++ b/package.json
@@ -52,8 +52,10 @@
     "date-fns": "^3.3.1",
     "drizzle-orm": "^0.29.3",
     "embla-carousel-react": "8.0.0-rc22",
+    "lucide-react": "^0.330.0",
     "mysql2": "^3.9.1",
     "next": "14.1.0",
+    "next-auth": "5.0.0-beta.9",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
