--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,cjs,mjs,json,md,mdx,html,css}\" --cache",
     "check": "pnpm lint && pnpm format:check",
     "precommit": "lint-staged",
-    "prepare": "husky",
     "db:generate": "dotenv drizzle-kit generate:mysql",
     "db:push": "dotenv drizzle-kit push:mysql",
     "db:introspect": "dotenv drizzle-kit introspect:mysql",
@@ -51,6 +50,7 @@
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
     "drizzle-orm": "^0.29.3",
+    "embla-carousel-autoplay": "8.0.0-rc22",
     "embla-carousel-react": "8.0.0-rc22",
     "lucide-react": "^0.330.0",
     "mysql2": "^3.9.1",
