chore: add missing script

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,cjs,mjs,json,md,mdx,html,css}\" --cache",
     "check": "pnpm lint && pnpm format:check",
     "precommit": "lint-staged",
+    "prepare": "husky",
     "db:generate": "dotenv drizzle-kit generate:mysql",
     "db:push": "dotenv drizzle-kit push:mysql",
     "db:introspect": "dotenv drizzle-kit introspect:mysql",
@@ -85,6 +86,7 @@
     "eslint-config-next": "14.1.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-tailwindcss": "^3.14.1",
+    "husky": "^9.0.10",
     "lint-staged": "^15.2.2",
     "postcss": "^8.4.34",
     "prettier": "^3.2.5",
