--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "drizzle-orm": "^0.29.3",
     "embla-carousel-autoplay": "8.0.0-rc22",
     "embla-carousel-react": "8.0.0-rc22",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.330.0",
     "mysql2": "^3.9.1",
     "next": "14.1.0",
@@ -74,6 +75,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/eslint": "^8.56.2",
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.11.16",
     "@types/react": "^18.2.54",
     "@types/react-dom": "^18.2.18",
