--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,5 @@ DATABASE_HOST=""
 DATABASE_PORT=""
 DATABASE_NAME=""
 AUTH_SECRET="openssl rand -base64 32"
+GOOGLE_CLIENT_ID=""
+GOOGLE_CLIENT_SECRET=""
