--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "next": "14.1.0",
     "next-auth": "5.0.0-beta.9",
     "next-themes": "^0.2.1",
+    "performant-array-to-tree": "^1.11.0",
     "react": "^18.2.0",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18.2.0",
