--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@commitlint/cli": "^18.6.0",
     "@commitlint/config-conventional": "^18.6.0",
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
+    "@tailwindcss/typography": "^0.5.10",
     "@total-typescript/ts-reset": "^0.5.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.2",
