chore: next-auth -> custom

--- a/.env.example
+++ b/.env.example
@@ -4,5 +4,5 @@ DATABASE_HOST=""
 DATABASE_PORT=""
 DATABASE_NAME=""
 AUTH_SECRET="openssl rand -base64 32"
-GOOGLE_CLIENT_ID=""
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
