--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
     "drizzle-orm": "^0.29.3",
     "embla-carousel-autoplay": "8.0.0-rc22",
     "embla-carousel-react": "8.0.0-rc22",
+    "jose": "^5.2.2",
     "lodash": "^4.17.21",
     "lucide-react": "^0.330.0",
     "mysql2": "^3.9.1",
     "next": "14.1.0",
-    "next-auth": "5.0.0-beta.9",
     "next-themes": "^0.2.1",
     "performant-array-to-tree": "^1.11.0",
     "react": "^18.2.0",
