--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,6 @@ DATABASE_NAME=""
 AUTH_SECRET="openssl rand -base64 32"
 NEXT_PUBLIC_GOOGLE_CLIENT_ID=""
 GOOGLE_CLIENT_SECRET=""
+AUTHORIZE_NET_API_LOGIN_ID=""
+AUTHORIZE_NET_TRANSACTION_KEY=""
+AUTHORIZE_NET_SANDBOX=""
