--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "@ianvs/prettier-plugin-sort-imports": "^4.1.1",
     "@tailwindcss/typography": "^0.5.10",
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/authorizenet": "^1.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^8.56.2",
     "@types/lodash": "^4.14.202",
