--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,4 @@ GOOGLE_CLIENT_SECRET=""
 AUTHORIZE_NET_API_LOGIN_ID=""
 AUTHORIZE_NET_TRANSACTION_KEY=""
 AUTHORIZE_NET_SANDBOX=""
+NEXT_PUBLIC_FILE_URL=""
